--- a/css/estilosss.css
+++ b/css/estilosss.css
@@ -153,7 +153,7 @@ nav {
                     padding: 20px;
 					margin-top: 40px;
 					
-					
+					position: absolute;
 					bottom: 0;
 					left: 0;
 					right: 0;
